# openssl_cert_gen

./: .coveragerc  .gitignore  Dockerfile  LICENSE-MIT  MANIFEST.in  README.rst  cert_gen.py  config.ini  docker_cmd.sh  install-chromedriver-centos.sh  install-chromedriver.sh  pyproject.toml  requirements.txt  setup.py  test_microsoft_ca.py
certgen/: __main__.py  cli.py  config.json  utils.py
certgen/cert_authorities/: microsoft_ca.py  self_signed.py
certgen/data/: config_template.ini
